eip.tf
 resource "aws_eip" "IBM_vpc_Eip" {
  depends_on = [ aws_internet_gateway.IBM_IGW ]
  vpc      = true
  tags = {
    Name = "IBM_VPC_NATGATEWAY"
  }
}
